[package]
name = "aether"
version = "1.0.0"
edition = "2021"
authors = ["Physis-Research"]
description = "Regime-Aware Symbolic Regression Engine for Entropy Harvesting"
license = "MIT"

[[bin]]
name = "aether"
path = "src/main.rs"

[lib]
name = "aether"
path = "src/lib.rs"

[dependencies]
rayon = "1.11"
ndarray = { version = "0.17", features = ["rayon", "serde"] }
rand = "0.9"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"